--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Shooting Checklist – PWA</title>
 
-<!-- PWA META -->
+<!-- PWA -->
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#111">
 
-<!-- iOS Support -->
-<link rel="apple-touch-icon" href="icons/icon-192.png">
+<!-- iOS PWA Requirements -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+<!-- iOS ICONS – VERY IMPORTANT -->
+<link rel="apple-touch-icon" sizes="192x192" href="icons/icon-192.png">
+<link rel="apple-touch-icon" sizes="512x512" href="icons/icon-512.png">
+<link rel="apple-touch-icon" href="icons/icon-512.png">
 
 <style>
     body {
